// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render correctly when there is no component prop 1`] = `
<div>
  <a
    class="rmd-link"
    href="#"
  >
    Content
  </a>
</div>
`;

exports[`Link should render correctly when there is no component prop 2`] = `
<div>
  <a
    class="rmd-link"
  >
    Disabled Link
  </a>
</div>
`;

exports[`Link should render correctly when there is no component prop 3`] = `
<div>
  <a
    class="rmd-link"
    href="/direct-url"
  >
    Direct url
  </a>
</div>
`;

exports[`Link should should render correctly when using @reach/router's Link component 1`] = `
<div>
  <a
    class="rmd-link"
    href="/#"
  >
    Content
  </a>
</div>
`;

exports[`Link should should render correctly when using @reach/router's Link component 2`] = `
<div>
  <a
    aria-current="page"
    class="rmd-link"
    href="/"
  >
    Disabled Link
  </a>
</div>
`;

exports[`Link should should render correctly when using @reach/router's Link component 3`] = `
<div>
  <a
    class="rmd-link"
    href="/direct-url"
  >
    Direct url
  </a>
</div>
`;

exports[`Link should should render correctly when using react-router's Link component 1`] = `
<div>
  <a
    class="rmd-link"
    href="/"
  >
    Content
  </a>
</div>
`;

exports[`Link should should render correctly when using react-router's Link component 2`] = `
<div>
  <a
    class="rmd-link"
    href="/"
  >
    Disabled Link
  </a>
</div>
`;

exports[`Link should should render correctly when using react-router's Link component 3`] = `
<div>
  <a
    class="rmd-link"
    href="/direct-url"
  >
    Direct url
  </a>
</div>
`;
